added link to run log

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="https://yourblog.com" target="_blank">Blog</a></li>
                 <li><a href="https://yourgallery.com" target="_blank">Gallery</a></li>
                 <li><a href="https://github.com" target="_blank">GitHub</a></li>
+                <li><a href="https://github.com" target="_blank">Run Log</a></li>
             </ul>
         </nav>
     </header>
