cleaned up layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bogoodski</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/8db165ecfc.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -14,31 +15,33 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-                <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
-                <li><a href="https://yourblog.com" target="_blank">Blog</a></li>
-                <li><a href="https://yourgallery.com" target="_blank">Gallery</a></li>
-                <li><a href="https://github.com" target="_blank">GitHub</a></li>
-                <li><a href="https://github.com" target="_blank">Run Log</a></li>
+                <a href="https://www.linkedin.com/in/sbogucki12/" target="_blank" rel="noopener noreferrer"><li><i class="fa-brands fa-linkedin" ></i><span>LinkedIn</span></li></a>
+                <a href="https://github.com/sbogucki12" target="_blank" rel="noopener noreferrer"><li><i class="fa-brands fa-github"></i><span>GitHub</span></li></a>
+                <a href="https://twitter.com/devbogoodski" target="_blank" rel="noopener noreferrer"><li><i class="fa-brands fa-twitter"></i><span>&#x1D54F;</span></li></a>
+                <a href="https://www.dailyrun.net/" target="_blank" rel="noopener noreferrer"><li><i class="fa-solid fa-person-running"></i><span>Run Log</span></li></a>
+                <a href="https://www.instagram.com/devbogoodski/" target="_blank" rel="noopener noreferrer"><li><i class="fa-brands fa-instagram"></i><span>Instagram</span></li></a>
+                <a href="https://medium.com/@bogoodski" target="_blank" rel="noopener noreferrer"><li><i class="fa-brands fa-medium"></i><span>Medium</span></li></a>
+                <a href="https://yourgallery.com" target="_blank" rel="noopener noreferrer"><li><i class="fa-solid fa-images"></i><span>Gallery</span></li></a>                
             </ul>
         </nav>
     </header>
     <main>
         <section class="objective">
-            <h1>Mission</h1>
+            <h1>About</h1>
             <p>Deeply interested in enterprise data and analytics, my primary focus is merging the two to get the best out of both.</p>
             <ul>
                 <li>
-                    Foundation: Data ontologies that form an organization's digital twin
+                    <i>Foundation:</i> Data ontologies and digitalized business processes that form an organization's digital twin.
                 </li>
                 <li>
-                    Integration: Generative artificial intelligence, large language models, and machine learning to unlock deep, domain-specific insights and automation
+                    <i>Integration:</i> Generative artificial intelligence, large language models, and machine learning to unlock deep, domain-specific insights and automation.
                 </li>
             </ul>
                 <p>Background in web development, transitioned into data science. Currently manage an analytics department. </p>
-                <p>Graduate - Cornell Python for Data Science certificate course.</p>
-                <p>Current student - Cornell Machine Learning certificate program: Estimated completion date: Aug., 2023.</p>
-            
+                <ul>
+                    <li>Graduate - Cornell Python for Data Science certificate course.</li>
+                    <li>Current student - Cornell Machine Learning certificate course: Estimated completion date: Aug., 2023.</li>
+                </ul>            
         </section>
     </main>
     <footer>
