--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <section class="objective">
-            <h1>About</h1>
+            <h1><i class="fa-regular fa-pen-to-square" style="color: #eeb3ebd2 "></i></h1>
             <p>Deeply interested in enterprise data and analytics, my primary focus is merging the two to get the best out of both.</p>
             <ul>
                 <li>
