added image carousel

--- a/index.html
+++ b/index.html
@@ -47,5 +47,16 @@
     <footer>
         <p>© 2023 Bogoodski.com</p>
     </footer>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <div class="carousel">
+            <img class="carousel-image" src="" alt="Image">
+            </div>
+        
+            <button class="carousel-button carousel-button-previous">Previous</button>
+            <button class="carousel-button carousel-button-next">Next</button>
+        </div>
+      </div>
 </body>
 </html>
