added image carousel

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <img class="carousel-image" src="" alt="Image">
             </div>
         
-            <button class="carousel-button carousel-button-previous">Previous</button>
-            <button class="carousel-button carousel-button-next">Next</button>
+            <button class="carousel-button carousel-button-previous"><i class="fa-solid fa-circle-chevron-left"></i></button>
+            <button class="carousel-button carousel-button-next"><i class="fa-solid fa-circle-chevron-right"></i></button>
         </div>
       </div>
 </body>
