added video to site

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             </ul>
         </nav>
     </header>
+    <section id="video-section">
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mAogBvaMcHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <p class="video-caption">Buried the lede: Huge 76ers Fan 🏀. #TrustTheProcess</p>
+        </div>
+    </section>
     <main>
         <section class="objective">
             <h1><i class="fa-regular fa-pen-to-square" style="color: #eeb3ebd2 "></i></h1>
