added interview to site

--- a/index.html
+++ b/index.html
@@ -76,12 +76,33 @@
                     2023.</li>
             </ul>
         </section>
+
     </main>
+    <section id="interview-images">
+        <div class="interview-image-container">
+            <div class="interview-image-wrapper">
+                <img src="media/images/interview1.png" alt="Interview Image 1">
+            </div>
+            <div class="interview-image-wrapper">
+                <img src="media/images/interview2.png" alt="Interview Image 2">
+            </div>
+            <div class="interview-image-wrapper">
+                <img src="media/images/interview3.png" alt="Interview Image 3">
+            </div>
+        </div>
+    </section>
     <footer>
         <span>
             © 2023 <a href="https://www.linkedin.com/in/sbogucki12/" target="_blank" rel="noopener noreferrer">BOGOODSKI</a> || <a href="https://github.com/sbogucki12/sbogucki12.github.io" target="_blank" rel="noopener noreferrer">Code</a>
         </span>        
     </footer>
+    <div id="interview-modal" class="modal">
+        <div class="modal-content">
+            <span id="interview-close" class="close">&times;</span>
+            <img id="interview-modal-image" src="" alt="Interview image">
+        </div>
+    </div>
+    
     <div id="gallery-modal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
