finishing up Maui story

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 </a>
                 <div id="gallery-button">
                     <li><i class="fa-solid fa-images"></i><span>Gallery</span></li></a>
+                </div>
+                <a href="https://bogoodski.com/maui.html" rel="noopener noreferrer">
+                    <li><i class="fa-regular fa-heart"></i><span>Maui, 2023</span></li>
+                </a>
             </ul>
         </nav>
     </header>
