finished Maui story

--- a/maui.html
+++ b/maui.html
@@ -211,8 +211,7 @@
                     <div class="maui-float-text-right">
                         <p>For the next two hours or so, we saw maybe a total of three other cars on the road. We had no
                             clue the explanation for the desolation. It was early in the day and we figured this might
-                            be the reason why. But that, along with winds that nearly blew us off the cliffs, was
-                            starting to raise our suspicions. </p>
+                            be the reason why. But that, along with winds that nearly blew us off the cliffs, was lending to legitimate concern. </p>
                     </div>
                 </div>
 
