finished Maui story

--- a/maui.html
+++ b/maui.html
@@ -211,7 +211,8 @@
                     <div class="maui-float-text-right">
                         <p>For the next two hours or so, we saw maybe a total of three other cars on the road. We had no
                             clue the explanation for the desolation. It was early in the day and we figured this might
-                            be the reason why. But that, along with winds that nearly blew us off the cliffs, was lending to legitimate concern. </p>
+                            be the reason why. But that, along with winds that nearly blew us off the cliffs, was
+                            lending to legitimate concern. </p>
                     </div>
                 </div>
 
@@ -330,14 +331,15 @@
                 <p>I’m not sharing the details of our seemingly absurd decision-making to self-report my own naivety.
                     Rather, I think some of you see the fatal consequences of the Maui fire and say, “That wouldn’t
                     happen to me.” How could anyone ever get trapped in a fire?</p>
-                <p><span style="background-color: rgba(255, 255, 0, 0.6); padding: 5px; font-style: italic;"> This is how.</span>
+                <p><span style="background-color: rgba(255, 255, 0, 0.6); padding: 5px; font-style: italic;"> This is
+                        how.</span>
                 </p>
 
                 <p>I’m haunted by the notion now that a seemingly trivial decision had such unknowingly critical stakes.
                     It's easy to say that we'd know how to react in a life or death situation. But what if you
                     don't know you're in one? </p>
 
-                
+
                 <p>Grateful for the escape we made from Lahaina, we returned to our rental unit. It eventually occurred
                     to us that we had not eaten since the sunset sail on Monday. The local grocery store was open but
                     there was a long line and we didn’t make it in time to be allowed to join the queue. The property on
@@ -356,6 +358,9 @@
                     <img src="media/images/maui/lahaina-smoke.jpg" alt="Lahaina - Smoke, from Kaanapali"
                         title="Lahaina - Smoke, from Kaanapali" class="maui-image">
                 </div>
+
+                <p>I know it all seems crazy. But none of us knew the severity of the situation. We didn't have many
+                    choices. Yet, for some reason, in recollection, the whole day gives me a weird sense of guilt.</p>
 
                 <p>While my friend ran inside a Kaanapali resort, I was struck for the first time - and the only time
                     during the entire day - by a sense of peril. The winds now seemed hurricane-force. Structures were
