finished Maui story

--- a/maui.html
+++ b/maui.html
@@ -364,7 +364,7 @@
 
                 <p>While my friend ran inside a Kaanapali resort, I was struck for the first time - and the only time
                     during the entire day - by a sense of peril. The winds now seemed hurricane-force. Structures were
-                    being damaged. The absence of rain was spooky. Gusting winds blistered the air with debris and
+                    being damaged. The absence of rain was eerie. Gusting winds blistered the air with debris and
                     smoke. For the first time, I experienced a sense of foreboding. </p>
 
                 <p>There wasn't much at the hotel for us to come by, but we were able to purchase a few bags of
