finished Maui story

--- a/maui.html
+++ b/maui.html
@@ -411,7 +411,8 @@
                 <p>Where frustration could be rightfully expected, the Aloha spirit wouldn’t be denied. Though waiting
                     for hours to enter, everyone was civil. A local Maui resident in front of us in line allowed us to
                     join her party. So, we got to enter the store a minute or two early due to her graciousness; maybe a
-                    small token but it had an outwardly huge and lasting impact. </p>
+                    small token but it left an outwardly huge and lasting impression. Such a
+                    commitment to kindness in face of so much stress.</p>
 
                 <p>It was only on Wednesday night that I really began to get a sense of what may have occurred in
                     Lahaina, though I chose not to believe it. To be honest, I never really did believe it. Until I saw
