finished Maui story

--- a/maui.html
+++ b/maui.html
@@ -111,8 +111,8 @@
                     <img src="media/images/maui/maui-lau_lau.jpg" alt="Maui Food - Lau Lau" title="Maui Food - Lau Lau"
                         class="maui-image maui-float-image-left" style="transform: rotate(-90deg);">
                     <div class="maui-float-text-right">
-                        <p>If the natural beauty alone wasn't convincing, the local cuisine added a
-                            compelling argument. After exploring Whalers Village in Kaanapali, we returned to our rental
+                        <p>If the natural beauty alone wasn't convincing, the local cuisine was pretty compelling. After
+                            exploring Whalers Village in Kaanapali, we returned to our rental
                             property and ordered delivery. The delivery was apparently straight from heaven and referred
                             to locally as <a href="https://onolicioushawaii.com/lau-lau" target="_blank"
                                 rel="noopener noreferrer">Lau Lau</a>. 🤤</p>
