finished Maui story

--- a/maui.html
+++ b/maui.html
@@ -431,7 +431,7 @@
                         title="West Maui - Map (After Fire)" class="maui-image">
                 </div>
 
-                <p>Meanwhile, my Mom had managed to acquire us a new flight for Thursday night. Her assistance
+                <p>Meanwhile, my Mom had managed to reschedule our flight for Thursday night. Her assistance
                     throughout this ordeal was steady and necessary. And for it, I’ll always be grateful. </p>
             </section>
 
