finished Maui story

--- a/maui.html
+++ b/maui.html
@@ -436,7 +436,7 @@
             </section>
 
             <section class="reveal-section hidden">
-                <h2>Thursday, August 10, 2023</h2>
+                <h2>Thursday, August 10, 2023.</h2>
 
                 <p>Though the fire occurred in Lahaina on Tuesday, I swear to you that it wasn’t until the drive to the
                     airport on Thursday that I actually believed it. </h2>
