added a run section to home page

--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
             </div>
         </div>
     </section>
+    <section id="running">        
+        <p class="running-stats"><i class="fa-solid fa-bolt"></i></p>
+        <div class="running-image-container">
+            <img src="media\images\running.jpg" alt="Running" class="running-image">
+        </div>
+        <div class="running-links">
+            <span><a href="https://www.dailyrun.net/" target="_blank">Run Log</a></span><span style="color: white"> || </span>
+            <span><a href="https://www.strava.com/athletes/31841889" target="_blank">Follow me on Strava</a></span>
+        </div>
+    </section>
+    
     <footer>
         <span>
             © 2023 <a href="https://www.linkedin.com/in/sbogucki12/" target="_blank" rel="noopener noreferrer">BOGOODSKI</a> || <a href="https://github.com/sbogucki12/sbogucki12.github.io" target="_blank" rel="noopener noreferrer">Code</a>
