updated running image

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section id="running">        
         <p class="running-stats"><i class="fa-solid fa-bolt"></i></p>
         <div class="running-image-container">
-            <img src="media\images\running.jpg" alt="Running" class="running-image">
+            <img src="media\images\running.png" alt="Running" class="running-image">
         </div>
         <div class="running-links">
             <span><a href="https://www.dailyrun.net/" target="_blank">Run Log</a></span><span style="color: white"> || </span>
