updated cornell status

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
             </p>
             <ul>
                 <li>Graduate - Cornell Python for Data Science certificate course.</li>
-                <li>Current student - Cornell Machine Learning certificate course: Estimated completion date: Aug.,
-                    2023.</li>
+                <li>Graduate - Cornell Machine Learning certificate course.</li>
             </ul>
         </section>
 
