added websites section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EVKCT4JXLS"></script>
@@ -40,7 +43,7 @@
                     <li><i class="fa-solid fa-briefcase"></i><span>Resume</span></li>
                 </div>
                 <a href="https://twitter.com/devbogoodski" target="_blank" rel="noopener noreferrer">
-                    <li><i class="fa-brands fa-twitter"></i><span>&#x1D54F;</span></li>
+                    <li><i class="fa-brands fa-x-twitter"></i><span>&#x1D54F;</span></li>
                 </a>
                 <a href="https://www.dailyrun.net/" target="_blank" rel="noopener noreferrer">
                     <li><i class="fa-solid fa-person-running"></i><span>Run Log</span></li>
@@ -112,6 +115,34 @@
             <span><a href="https://www.dailyrun.net/" target="_blank">Run Log</a></span><span style="color: white"> || </span>
             <span><a href="https://www.strava.com/athletes/31841889" target="_blank">Follow me on Strava</a></span>
         </div>
+    </section>
+
+    <section id="websites">
+        <div class="websites-caption">
+            <span><i class="fa-solid fa-globe" id="globe-icon"></i></span>
+            <span>little websites I've created...</span>
+        </div>
+        <div class="websites-container">
+            <a href="https://bogoodski2020.azurewebsites.net/" target="_blank" rel="noopener noreferrer">
+                <img src="media/images/websites/bogoodski2020_thumb.jpg" alt="Bogoodski 2020">
+            </a>
+            <a href="https://djbogoodski.azurewebsites.net/home" target="_blank" rel="noopener noreferrer">
+                <img src="media/images/websites/djbogoodski_thumb.jpg" alt="DJ Bogoodski">
+            </a>
+            <a href="https://corregidortech.azurewebsites.net/" target="_blank" rel="noopener noreferrer">
+                <img src="media/images/websites/corregidortech_thumb.jpg" alt="Corregidor Tech">
+            </a>
+            <a href="https://bogoodski2019.azurewebsites.net/" target="_blank" rel="noopener noreferrer">
+                <img src="media/images/websites/bogoodski2019_thumb.jpg" alt="Bogoodski 2019">
+            </a>
+            <a href="https://www.dailyrun.net/" target="_blank" rel="noopener noreferrer">
+                <img src="media/images/websites/dailyrun_thumb.jpg" alt="Daily Run">
+            </a>
+            <a href="http://2do.azurewebsites.net/" target="_blank" rel="noopener noreferrer">
+                <img src="media/images/websites/2doapp_thumb.jpg" alt="2Do App">
+            </a>
+        </div>
+
     </section>
     
     <footer>
