added link to soundcloud

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 <a href="https://bogoodski.com/maui.html" rel="noopener noreferrer">
                     <li><i class="fa-regular fa-heart"></i><span>Maui, 2023</span></li>
                 </a>
+                <a href="https://soundcloud.com/djbogoodski" target="_blank" rel="noopener noreferrer">
+                    <li><i class="fa-brands fa-soundcloud"></i><span>DJ BoGoodSki</span></li>
+                </a>
             </ul>
         </nav>
     </header>
